--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;600&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="mystyle.css" type="text/css" />
+<style type="text/css">
+    .social{list-style: none; margin: 0px; padding: 0px; position: absolute; right: 30px; top: 30px;}
+    .social li{display: inline-block;}
+    .social li a{font-size: 16px; color: #111; padding: 3px;}
+    .social li a:hover{color: #24CDD5;}
+
+</style>
 </head>
 
 <body>
@@ -26,8 +34,13 @@
 	<header>
     	<div class="container">
         	<div class="logo text-center">
-            	<a href="https://nlvx.com" target="_blank"><img src="https://nlvx.com/images/logo.png" alt="guidetour logo" class="img-fluid" /></a>
+            	<a href="https://nlvx.com" target="_blank"><img src="https://nlvx.com/images/logo.png" alt="guidetour logo" class="img-fluid" /></a>                   
             </div>
+            <ul class="social">
+                <li><a href="https://www.facebook.com/nlvxexchange" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/nlvxexchange" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/nlvx-exchange" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
         </div>
     </header>
     <section class="banner">
